--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <div class="left-div-footer">
             <p class="footer-text">Siga a SolarView nas redes sociais</p>
             <div class="social-media-area">
-                <div class="social-media"><img src="img/1766261990085.png" alt="" width="20px"></div>
-                <div class="social-media"><img src="img/1766261848411.png" alt="" width="20px"></div>
-                <div class="social-media"><img src="img/1766261639395.png" alt="" width="20px"></div>
-                <div class="social-media"><img src="img/1766261752752.png" alt="" width="20px"></div>
+                <a href="#" class="social-media"><img src="img/1766261990085.png" alt="" width="20px"></a>
+                <a href="#" class="social-media"><img src="img/1766261848411.png" alt="" width="20px"></a>
+                <a href="#" class="social-media"><img src="img/1766261639395.png" alt="" width="20px"></a>
+                <a href="#" class="social-media"><img src="img/1766261752752.png" alt="" width="20px"></a>
             </div>
         </div>
     </div>
@@ -51,16 +51,19 @@
             </div>
 
             <div class="check-pwd">
-                <input type="checkbox">
-                <label class="cb-label">Continuar conectado</label>
-
+                <div class="main-cb">
+                    <input type="checkbox">
+                    <label class="cb-label">Continuar conectado</label>
+                </div>
                 <a href="#" class="">Esqueceu sua senha?</a>
             </div>
 
             <div class="fake-recaptcha">
                 <div class="captcha-input-label">
-                    <input type="checkbox" class="cb-captcha">
-                    <label class="captcha-label">Não sou um robô</label>
+                    <div class="main-cb-2">
+                        <input type="checkbox" class="cb-captcha">
+                        <label class="captcha-label">Não sou um robô</label>
+                    </div>
                 </div>
                 <div class="fake-recaptcha-img">
                     <img src="img/RecaptchaLogo.svg.png" alt="" width="60px">
